Updated from the main repository

--- a/findcustomer.html
+++ b/findcustomer.html
@@ -1,3 +1,5 @@
+<!--© 2021 Sean Murdock-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +10,7 @@
 </head>
 <body>
 <div class="page-header">
-    <p><img src="stedi-logo-4000px-x-4000px.png" width="300" height="300" style="background-color:black;"/></p>
+    <p><img src="stedi-logo-4000px-x-4000px.png" width="200" height="200" style="background-color:black;"/></p>
 </div>
 <div style="text-align:center">
 
