--- a/createcustomer.html
+++ b/createcustomer.html
@@ -1,38 +1,46 @@
+<!--© 2021 Sean Murdock-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>New Customer</title>
+    <title>New Account</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href= "favicon.ico" type="image/x-icon" />
 </head>
 <body>
 <div class="page-header">
-    <p><img src="stedi-logo-4000px-x-4000px.png" width="300" height="300" style="background-color:black;"/></p>
+    <p><img src="stedi-logo-4000px-x-4000px.png" width="200" height="200" style="background-color:black;"/></p>
 </div>
-<br>
+
 <form name="newUser" id="newUser" method="post" >
 
     <p>
-        <label class="stepcount" for="newUser"><span>*</span> Name:</label>
+        <label class="stepcount" for="newUser"><span>*</span> Name:</label><br>
         <input class="stepcount" type="text" id="cn" name="customername" size="25"  onchange="setcustomername()" required>
     </p>
     <p>
-        <label class="stepcount" for="newUser">E-Mail: </label>
-        <input class="stepcount" type="email" id="email" name="email" size="35" onchange="setemail()">
+        <label class="stepcount" for="newUser"><span>*</span> E-Mail: </label><br>
+        <input class="stepcount" type="email" id="email" name="email" size="50" onchange="setemail()">
     </p>
-    <br>
     <p>
-        <label class="stepcount" for="newUser"><span>*</span> Phone Number: </label>
+        <label class="stepcount" for="newUser"><span>*</span> Phone Number: </label><br>
         <input class="stepcount" type="tel" id="phone" name="phone" size="12" onchange="setphone()" required>
     </p>
-    <br>
     <p>
-        <label class="stepcount" for="newUser"><span>*</span> Birthday: </label>
-        <input class="stepcount" type="date" id="bday" name="bday" onchange="setbday()" required><br>
+        <label class="stepcount" for="newUser"><span>*</span> Birthday: </label><br>
+        <input class="stepcount" type="date" id="bday" name="bday" onchange="setbday()" required>
+    </p>
+    <p>
+        <label class="stepcount" for="newUser"><span>*</span> Password (6 digits, upper, lower, number, and symbol): </label><br>
+        <input class="stepcount" type="text" id="password" name="password" size="25" onchange="setuserpassword()" required>
+    </p>
+    <p>
+        <label class="stepcount" for="newUser"><span>*</span> Verify Password: </label><br>
+        <input class="stepcount" type="text" id="verifypassword" name="verifypassword" size="25" onchange="setverifypassword()" required>
     </p>
     <br>
-    <div style="text-align:center">
+    <div style="text-align:left">
 
         <p>
             <input class="btn btn-lg btn-primary" id="createbtn" type="button" onclick="createcustomer()" value="Submit">
@@ -41,6 +49,7 @@
 </form>
 <script src="jquery-3.1.1.min.js"></script>
 <script src="managecustomer.js"></script>
+<script src="manageuser.js"></script>
 
 
 
